// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cookie Disclaimer component when first loaded should render correctly 1`] = `
<div
  className="container"
  onTransitionEnd={[Function]}
>
  <div
    className="positionWrapper"
  >
    <div
      aria-label="cookie emoji"
      className="cookieEmoji notificationElement"
      role="img"
    />
    <span
      className="message notificationElement"
    >
      Attention! This site uses cookies.
    </span>
    <button
      className="tick notificationElement"
      onClick={[Function]}
      type="button"
    />
  </div>
</div>
`;

exports[`Cookie Disclaimer component when first loaded should then apply the loaded class 1`] = `
<CookieDisclaimer>
  <div
    className="container loaded"
    onTransitionEnd={[Function]}
  >
    <div
      className="positionWrapper"
    >
      <div
        aria-label="cookie emoji"
        className="cookieEmoji notificationElement"
        role="img"
      />
      <span
        className="message notificationElement"
      >
        Attention! This site uses cookies.
      </span>
      <button
        className="tick notificationElement"
        onClick={[Function]}
        type="button"
      />
    </div>
  </div>
</CookieDisclaimer>
`;

exports[`Cookie Disclaimer component when first loaded when the user accepts the policy after the transition ends should render null 1`] = `""`;

exports[`Cookie Disclaimer component when first loaded when the user accepts the policy should render correctly 1`] = `
<CookieDisclaimer>
  <div
    className="container closed"
    onTransitionEnd={[Function]}
  >
    <div
      className="positionWrapper"
    >
      <div
        aria-label="cookie emoji"
        className="cookieEmoji notificationElement"
        role="img"
      />
      <span
        className="message notificationElement"
      >
        Attention! This site uses cookies.
      </span>
      <button
        className="tick notificationElement"
        onClick={[Function]}
        type="button"
      />
    </div>
  </div>
</CookieDisclaimer>
`;
